--- a/src/app/auth/auth.css
+++ b/src/app/auth/auth.css
@@ -1,4 +1,4 @@
-.login-container {
+.auth-container {
   width: 100vw;
   height: 50vh;
   display: flex;
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-.login-card {
+.auth-card {
   display: flex;
   flex-direction: column;
   gap: 10px;
